# 3d-graphic-engine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/engine/: GameEngine.cpp  GameEngine.h
src/engine/shapes/: Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Triangle3D.cpp  Triangle3D.h
